# Encapsulation

./: magic1.py  magic2.py  magic4.py  pyproject.toml
bottle/: pyproject.toml
bottle/tests/: test_bottle.py
